Fix loading dimension on Mobile

--- a/src/pages/Style.css
+++ b/src/pages/Style.css
@@ -447,7 +447,7 @@ body, html {
   display: block;
 }
 
-@media (max-width: 767px) {
+@media only screen and (max-width: 768px) {
   .mobile-wrapper {
     margin-top: 0rem !important;
     border-radius: 0px; 
@@ -461,9 +461,14 @@ body, html {
     width: 80%;
     margin-left: 1rem;
   }
+
+  .loading-container {
+    height: 88%;
+  }
+  
 }
 
-@media (min-width: 900px) {
+@media only screen and (min-width: 900px) {
   ion-item:hover, 
   ion-card:hover,
   ion-chip:hover {
